[FEAT] 개선된 지원 플로우에 따른 리팩토링 (#290)
* refactor: 회원 등록 엔드포인트를 /apply 업데이트

* refactor: 지원 상태 확인 기능 개선 및 ApplyStatusResponse 추가

* refactor: 개선된 프로필 작성에 따른 직군 및 관심 도메인 선택 enum 클래스 리팩토링

* feat: 지원 과정에서 프로필 저장 기능 추가 생성

* feat: 지원서 제출 시 임시 저장한 지원서가 있을 경우 생성 대신 수정하는 로직 추가

* feat: 임시 회원 등록 시 Apply 엔티티 생성 및 저장 기능 추가

* fix: 전화번호 입력 검증 메시지 오타 수정

* refactor: Apply 엔티티 생성 시 중복 체크 로직 추가

* fix: InterestedDomain enum 오타 수

* fix: InterestedDomain enum 오타 수정

* refactor: 제거된 TempMemberRegisteredEvent 관련 로직 및 불필요한 의존성 정리

* refactor: 프로필 작성 시 apply 생성 로직 추가

* fix: 파일 끝에 개행 추가

* refactor: 의미없는 주석 제거

* fix: 파일 끝에 개행 추가

* refactor: saveProfile 메서드에 @Override 어노테이션 추가

* refactor: saveProfile 멱등성 보장 리팩토링