@@ -1,5 +1,14 @@
 package org.ject.support.domain.apply.service;
 
+import static org.ject.support.domain.apply.domain.Apply.Status.JOINED;
+import static org.ject.support.domain.apply.domain.Apply.Status.SUBMITTED;
+import static org.ject.support.domain.apply.domain.Apply.Status.TEMP_SAVED;
+import static org.ject.support.domain.apply.exception.ApplyErrorCode.ALREADY_SUBMITTED;
+import static org.ject.support.domain.apply.exception.ApplyErrorCode.NOT_FOUND_APPLY;
+
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.ject.support.common.util.Map2JsonSerializer;
@@ -9,6 +18,8 @@ import org.ject.support.domain.apply.domain.ApplicationForm;
 import org.ject.support.domain.apply.domain.Apply;
 import org.ject.support.domain.apply.domain.Portfolio;
 import org.ject.support.domain.apply.dto.ApplyPortfolioDto;
+import org.ject.support.domain.apply.dto.ApplyProfileRequest;
+import org.ject.support.domain.apply.dto.ApplyStatusResponse;
 import org.ject.support.domain.apply.dto.TempApplicationFormResponse;
 import org.ject.support.domain.apply.exception.ApplyErrorCode;
 import org.ject.support.domain.apply.exception.ApplyException;
@@ -16,6 +27,9 @@ import org.ject.support.domain.apply.repository.ApplicationFormRepository;
 import org.ject.support.domain.apply.repository.ApplyRepository;
 import org.ject.support.domain.member.JobFamily;
 import org.ject.support.domain.member.entity.Member;
+import org.ject.support.domain.member.exception.MemberErrorCode;
+import org.ject.support.domain.member.exception.MemberException;
+import org.ject.support.domain.member.repository.MemberRepository;
 import org.ject.support.domain.recruit.domain.Recruit;
 import org.ject.support.domain.recruit.exception.QuestionErrorCode;
 import org.ject.support.domain.recruit.exception.QuestionException;
@@ -25,17 +39,6 @@ import org.ject.support.domain.recruit.repository.RecruitRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import static org.ject.support.domain.apply.domain.Apply.Status.JOINED;
-import static org.ject.support.domain.apply.domain.Apply.Status.SUBMITTED;
-import static org.ject.support.domain.apply.domain.Apply.Status.TEMP_SAVED;
-import static org.ject.support.domain.apply.exception.ApplyErrorCode.ALREADY_SUBMITTED;
-import static org.ject.support.domain.apply.exception.ApplyErrorCode.NOT_FOUND_APPLY;
-
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -43,6 +46,7 @@ public class ApplyService implements ApplyUsecase {
     private final RecruitRepository recruitRepository;
     private final ApplyRepository applyRepository;
     private final ApplicationFormRepository applicationFormRepository;
+    private final MemberRepository memberRepository;
     private final Map2JsonSerializer map2JsonSerializer;
     private final String2MapSerializer string2MapSerializer;
 
@@ -145,16 +149,61 @@ public class ApplyService implements ApplyUsecase {
                 .orElseThrow(() -> new ApplyException(NOT_FOUND_APPLY));
 
         // 4. Portfolio와 ApplicationForm 영속화
-        // TODO 임시 저장한 지원서가 있을 경우 업데이트
+        if (apply.isSubmitted()) {
+            throw new ApplyException(ALREADY_SUBMITTED);
+        }
+
         String content = map2JsonSerializer.serializeAsString(answers);
-        ApplicationForm applicationForm = createApplicationForm(apply, content, getNewPortfolios(portfolios));
-        applicationFormRepository.save(applicationForm);
+        List<Portfolio> newPortfolios = getNewPortfolios(portfolios);
+
+        // 임시 저장한 지원서가 있을 경우 업데이트
+        if (apply.isTempSaved()) {
+            ApplicationForm applicationForm = apply.getApplicationForm();
+            applicationForm.updateContentAndPortfolios(content, newPortfolios);
+        } else {
+            ApplicationForm applicationForm = createApplicationForm(apply, content, newPortfolios);
+            applicationFormRepository.save(applicationForm);
+            apply.updateApplicationForm(applicationForm);
+        }
+        apply.updateStatus(SUBMITTED);
     }
 
     @Override
     @PeriodAccessible(permitAllJob = true)
-    public boolean checkApplySubmit(Long memberId) {
-        return applicationFormRepository.existsByMemberId(memberId, LocalDateTime.now());
+    public ApplyStatusResponse checkApplySubmit(Long memberId) {
+        return applyRepository.findByMemberId(memberId)
+                .map(ApplyStatusResponse::of)
+                .orElseThrow(() -> new ApplyException(NOT_FOUND_APPLY));
+    }
+
+    @Override
+    @PeriodAccessible
+    @Transactional
+    public void saveProfile(Long memberId, ApplyProfileRequest request) {
+        var member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new MemberException(MemberErrorCode.NOT_FOUND_MEMBER));
+
+        createApplyIfNotExists(member, request.jobFamily());
+
+        var memberEditorBuilder = member.toEditor();
+        var memberEditor = memberEditorBuilder
+                .name(request.name())
+                .phoneNumber(request.phoneNumber())
+                .jobFamily(request.jobFamily())
+                .careerDetails(request.careerDetails())
+                .experiencePeriod(request.experiencePeriod())
+                .interestedDomains(request.interestedDomains())
+                .build();
+
+        member.edit(memberEditor);
+    }
+
+    private void createApplyIfNotExists(Member member, JobFamily jobFamily) {
+        applyRepository.findByMemberId(member.getId()).orElseGet(() -> {
+            var recruit = getPeriodRecruit(jobFamily);
+            var newApply = Apply.createApply(member, recruit);
+            return applyRepository.save(newApply);
+        });
     }
 
     private void validateQuestions(final Map<String, String> answers, final Recruit recruit) {
@@ -178,7 +227,7 @@ public class ApplyService implements ApplyUsecase {
     private List<Portfolio> getNewPortfolios(List<ApplyPortfolioDto> portfolios) {
         return portfolios.stream()
                 .map(ApplyPortfolioDto::toEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ApplicationForm createApplicationForm(Apply apply, String content, List<Portfolio> portfolios) {
